@startuml
[*] --> MemorySentinel

state MemorySentinel {
    MemorySentinel: process(state: EpisodicAgentState)
}

MemorySentinel --> MemoryExtractor : contains_information == True
MemorySentinel --> [*] : contains_information == False

state MemoryExtractor {
    MemoryExtractor: process(state: EpisodicAgentState)
}

MemoryExtractor --> MemoryReviewer : Extracted Memories Available

state MemoryReviewer {
    MemoryReviewer: process(state: EpisodicAgentState)
}

MemoryReviewer --> MemoryAttributor : Extracted Knowledge Verified
MemoryReviewer --> MemoryExtractor : needs_repair == True \n Provide Repair Message

state MemoryAttributor {
    MemoryAttributor: process(state: EpisodicAgentState)
}

MemoryAttributor --> MemoryHandler : Attributes Assigned

state MemoryHandler {
    MemoryHandler: process(state: EpisodicAgentState)
}

MemoryHandler --> [*]

@enduml
